# STM32F407_XMODEM_Bootloader

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  README.md  STM32F407_Xmodem_Test Debug.launch  STM32F407_Xmodem_Test.ioc  Sublime Text 3 (Monokai).xml  requirements.txt
APPLICATION/: CMakeLists.txt  STM32F407VGTX_FLASH.ld
APPLICATION/Core/Inc/: main.h
APPLICATION/Core/Src/: main.c  stm32f4xx_it.c
APPLICATION/Drivers/misc/: ring_buffer.c
APPLICATION/PROJECT/: project.c
APPLICATION/PROJECT/misc/: ring_buffer.c  ring_buffer.h
Abstract/: .cproject  STM32F407VGTX_FLASH.ld  STM32F4_XMODEM_Bootloader Debug.launch
Abstract/Drivers/Inc/: stm32f407xx.h  stm32f407xx_rcc.h  stm32f407xx_usart.h
Abstract/Drivers/my libs/: circularBuffer.c  circularBuffer.h
Abstract/Inc/: main.h
Abstract/Src/: main.c
Abstraction/: .cproject  .project
Abstraction/Drivers /: stm32f407xx.h  stm32f407xx_flash.c
Abstraction/Drivers /CMSIS/: core_cm4.h
Abstraction/Drivers /Inc/: stm32f407xx.h  stm32f407xx_flash.h  stm32f407xx_rcc.h  stm32f407xx_usart.h
Abstraction/Drivers /Inc /: stm32f407xx.h  stm32f407xx_flash.h  stm32f407xx_gpio.h
Abstraction/Drivers /Src/: stm32f407xx_gpio.c  stm32f407xx_usart.c
Abstraction/Drivers /my libs/: simple_delay.c  simple_delay.h
Abstraction/Inc/: main.h
Abstraction/Src/: syscalls.c
BOOT/: CMakeCache.txt  CMakeLists.txt  STM32F407VGTX_FLASH.ld
BOOT/Core/Src/: BOOT.c
BOOT/Core/Startup/: startup_stm32f407vgtx.s
Core/Inc/: main.h
Core/Src/: stm32f4xx_it.c  syscalls.c
Core/Startup/: startup_stm32f407vgtx.s
Drivers/Inc/: stm32f407xx.h  stm32f407xx_flash.h  stm32f407xx_gpio.h
Drivers/Src/: stm32f407xx_flash.c  stm32f407xx_gpio.c  stm32f407xx_rcc.c
Drivers/my libs/: circularBuffer.c
Inc/: main.h
LOADER/: CMakeLists.txt  CMakePresets.json  STM32F407VGTX_FLASH.ld  STM32F407VGTX_RAM.ld
LOADER/Core/Inc/: main.h
LOADER/Core/Src/: LOADER.c  stm32f4xx_it.c
MBEDTLS/App/: mbedtls_config.h
Register Only/: .cproject  .project
Register Only/Drivers/CMSIS/Inc/: stm32f407xx.h
Register Only/Drivers/Inc/: stm32f407xx.h
Register Only/Drivers/my libs/: circularBuffer.c  circularBuffer.h
Register Only/Inc/: main.h
Register Only/Src/: main.c
Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c
UPDATER/: CMakeLists.txt  STM32F407VGTX_FLASH.ld  STM32F407VGTX_RAM.ld
UPDATER/Core/Inc/: main.h
UPDATER/Core/Src/: main.c  stm32f4xx_it.c
UPDATER/Core/Startup/: startup_stm32f407vgtx.s
UPDATER/Drivers/UpdaterMisc/: ring_buffer.c  ring_buffer.h  updater_flash.c  xmodem.c  xmodem.h
UPDATER/MBEDTLS/App/: mbedtls.c  mbedtls.h  mbedtls_config.h
UPDATER/PROJECT/misc/: ring_buffer.c  ring_buffer.h  updater_flash.h  xmodem.c  xmodem.h
app/src/: main.c
application/src/: main.c  system_stm32f4xx.c
blinky binary/: STM32F407VGTX_FLASH.ld  blinky_example.c
boot/src/: main.c
cmake/modules/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
common/inc/: bootloader.h  delta_update.h  flash.h  image.h  main.h  ring_buffer.h  stm32f4xx_it.h  transport.h  uart_transport.h  xmodem.h
common/src/: bootloader.c  crc.c  delta_update.c  flash.c  image.c  ring_buffer.c  stm32f4xx_it.c  syscalls.c  transport.c  uart_transport.c  xmodem.c
linker/: STM32F407VGTX_FLASH_APP.ld  STM32F407VGTX_FLASH_BOOT.ld  STM32F407VGTX_FLASH_LOADER.ld  STM32F407VGTX_FLASH_UPDATER.ld
loader/src/: main.c  system_stm32f4xx.c
misc/: ring_buffer.h  serialcom_vars.h  uart_log.c  uart_log.h
misc/nanoprintf/: nanoprintf.h
my_libs/: basic_flash_lib.c  basic_flash_lib.h  button_init.c  button_init.h  circularBuffer.c  circularBuffer.h  github_xmodem.c  github_xmodem.h  led_init.c  led_init.h  simple_delay.c  simple_delay.h  uart_init.c  uart_init.h  xmodem.c  xmodem.h
scripts/: create_patch.py  encrypt_firmware.py  memap.py  merge_images.py
updater/inc/: updater_flash.h  xmodem.h
updater/src/: main.c  system_stm32f4xx.c  updater_flash.c  xmodem.c
